Build and package for osx, linux and windows